; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libpng/extr_pngwio.c_png_write_data.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libpng/extr_pngwio.c_png_write_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 (%struct.TYPE_5__*, i32, i64)* }

@png_bytep = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"Call to NULL write function\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @png_write_data(%struct.TYPE_5__* %0, i32 %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load i32 (%struct.TYPE_5__*, i32, i64)*, i32 (%struct.TYPE_5__*, i32, i64)** %8, align 8
  %10 = icmp ne i32 (%struct.TYPE_5__*, i32, i64)* %9, null
  br i1 %10, label %11, label %21

11:                                               ; preds = %3
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load i32 (%struct.TYPE_5__*, i32, i64)*, i32 (%struct.TYPE_5__*, i32, i64)** %13, align 8
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %16 = load i32, i32* @png_bytep, align 4
  %17 = load i32, i32* %5, align 4
  %18 = call i32 @png_constcast(i32 %16, i32 %17)
  %19 = load i64, i64* %6, align 8
  %20 = call i32 %14(%struct.TYPE_5__* %15, i32 %18, i64 %19)
  br label %24

21:                                               ; preds = %3
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %23 = call i32 @png_error(%struct.TYPE_5__* %22, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  br label %24

24:                                               ; preds = %21, %11
  ret void
}

declare dso_local i32 @png_constcast(i32, i32) #1

declare dso_local i32 @png_error(%struct.TYPE_5__*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
